--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -376,5 +376,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="password_already_set_setting_a_new_password_will_overwrite">A palavra-passe já está definida. Se definir uma nova palavra-passe a atual será substituída e, caso a perca, já não será possível aceder ao ficheiro.</string>
     <string name="code_block">Bloco de código</string>
     <string name="add_completion_date">Adicionar data de conclusão</string>
-    <string name="add_completion_date_for_todos_when_marking_them_as_done">Adicionar data de conclusão das tarefas ao marcá-las como concluídas</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Adicionar data de conclusão das tarefas se forem dadas como concluídas</string>
 </resources>
