--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -47,7 +47,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="html_as_plaintext">HTML (als Klartext)</string>
     <string name="document_editor_font">Schriftart</string>
     <string name="theme">Thema</string>
-    <string name="open_existing_files_in_view_mode">Existierende Dateien im Ansichts-Modus öffnen</string>
+    <string name="open_existing_files_in_view_mode">Bestehende Dateien im Ansichtsmodus öffnen</string>
     <string name="about">Über</string>
     <string name="plaintext">Klartext</string>
     <string name="file">Datei</string>
@@ -297,7 +297,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="black">Schwarz</string>
     <string name="white">Weiß</string>
     <string name="view">Betrachten</string>
-    <string name="view_mode">Ansichts-Modus</string>
+    <string name="view_mode">Ansichtsmodus</string>
     <string name="edit_mode">Bearbeitungs-Modus</string>
     <string name="mount_storage">Speicher einhängen</string>
     <string name="application_needs_access_to_storage_mount_it">Berechtigung ist erforderlich, um auf diesen Speicher zuzugreifen. Hänge den Speicher ein um Zugriff zu gewähren. Bestätige diesen Dialog um ein Popup anzuzeigen. Wählen den Speicher aus und bestätige mit \"auswählen\".</string>
@@ -308,7 +308,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_start_folder">App-Start Ordner</string>
     <string name="tab_width">Tabulatorbreite</string>
     <string name="amount_of_space_for_tab">Anzahl von Leerzeichen zur Tabulator-Darstellung</string>
-    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Die ausgewählte Datei kann eine Klartext-Datei sein. Möchtest du es im Editor oder in einer anderen App öffnen?\n\nVersuche nicht, binäre Dateien zu öffnen. Wenn du dir nicht sicher bist, öffne es mit einer anderen App.</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Die ausgewählte Datei ist vielleicht eine Klartext-Datei. Möchtest du sie im Editor oder in einer anderen App öffnen?\n\nVersuche nicht, Binärdateien zu öffnen. Wenn du unsicher bist, öffne sie mit einer anderen App.</string>
     <string name="list_in_recent_files">In zuletzt geöffneten Dateien anzeigen</string>
     <string name="reload">Aktualisieren</string>
     <string name="wrap_words">Zeilenumbruch</string>
