--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -69,4 +69,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_image">ছবি সন্নিবেশিত করুন</string>
     <string name="contributors">অবদানকারীরা</string>
     <string name="save_location">অবস্থান সংরক্ষণ করুন</string>
+    <string name="select_storage_folder">রাখার ফোল্ডার নির্বাচন করো</string>
+    <string name="licenses">অনুমতিপত্র সমূহ</string>
+    <string name="changelog">পরিবর্তনসূচী</string>
+    <string name="more_info">আরো তথ্য</string>
+    <string name="show_license_of_the_app">অ্যাপের অনুমতিপত্র দেখান</string>
+    <string name="show_third_party_licenses">৩য় পক্ষের অনুমতিপত্র দেখান</string>
+    <string name="language">ভাষা</string>
 </resources>
