--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -76,4 +76,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="show_license_of_the_app">অ্যাপের অনুমতিপত্র দেখান</string>
     <string name="show_third_party_licenses">৩য় পক্ষের অনুমতিপত্র দেখান</string>
     <string name="language">ভাষা</string>
+    <string name="error_need_storage_permission_to_save_documents">নথিগুলো সংরক্ষণ করতে স্টোরেজের অনুমতি প্রয়োজন</string>
+    <string name="open_with">খুলতে ব্যবহার করুন</string>
+    <string name="sort">সাজানোর ক্রম</string>
+    <string name="date">তারিখ</string>
+    <string name="deleteme____1">নাম</string>
+    <string name="size">আকার</string>
+    <string name="reverse_order">উল্টো ক্রম</string>
+    <string name="contribute">অবদান</string>
+    <string name="donate">দান করুন</string>
+    <string name="press_back_again_to_exit">বাহির হতে \'পিছন\' আবার ক্লিক করুন</string>
 </resources>
