New Crowdin updates (#1054)

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -64,4 +64,46 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%dটি বস্তু নির্বাচিত</string>
     <string name="hide_statusbar_at_this_view">এই জায়গায় স্ট্যাটাস বার (অবস্থা নির্দেশক অংশ) লোকাও</string>
     <string name="hide_statusbar">স্ট্যাটাস বার লোকাও</string>
+    <string name="name">নাম</string>
+    <string name="insert_link">লিঙ্ক সন্নিবেশিত করুন</string>
+    <string name="insert_image">ছবি সন্নিবেশিত করুন</string>
+    <string name="contributors">অবদানকারীরা</string>
+    <string name="save_location">অবস্থান সংরক্ষণ করুন</string>
+    <string name="select_storage_folder">রাখার ফোল্ডার নির্বাচন করো</string>
+    <string name="licenses">অনুমতিপত্র সমূহ</string>
+    <string name="changelog">পরিবর্তনসূচী</string>
+    <string name="more_info">আরো তথ্য</string>
+    <string name="show_license_of_the_app">অ্যাপের অনুমতিপত্র দেখান</string>
+    <string name="show_third_party_licenses">৩য় পক্ষের অনুমতিপত্র দেখান</string>
+    <string name="language">ভাষা</string>
+    <string name="error_need_storage_permission_to_save_documents">নথিগুলো সংরক্ষণ করতে স্টোরেজের অনুমতি প্রয়োজন</string>
+    <string name="open_with">খুলতে ব্যবহার করুন</string>
+    <string name="sort">সাজানোর ক্রম</string>
+    <string name="date">তারিখ</string>
+    <string name="deleteme____1">নাম</string>
+    <string name="size">আকার</string>
+    <string name="reverse_order">উল্টো ক্রম</string>
+    <string name="contribute">অবদান</string>
+    <string name="donate">দান করুন</string>
+    <string name="press_back_again_to_exit">বাহির হতে \'পিছন\' আবার ক্লিক করুন</string>
+    <string name="exit">প্রস্থান</string>
+    <string name="undo">পূর্বাবস্থায় ফিরুন</string>
+    <string name="redo">পুনরায় করুন</string>
+    <string name="more">আরো</string>
+    <string name="notebook">নোটবই</string>
+    <string name="help">সাহায্য</string>
+    <string name="todo_list">করণীয় তালিকা</string>
+    <string name="task">কার্য</string>
+    <string name="category">শ্রেণী</string>
+    <string name="context">প্রসঙ্গ</string>
+    <string name="list">তালিকা</string>
+    <string name="priority">অগ্রাধিকার</string>
+    <string name="history">ইতিহাস</string>
+    <string name="sync">সমন্বয়</string>
+    <string name="save">সংরক্ষণ করুন</string>
+    <string name="update">হালনাগাদ</string>
+    <string name="clear">পরিষ্কার করুন</string>
+    <string name="current_date">বর্তমান তারিখ</string>
+    <string name="add_task">কার্য সংযোজন করুন</string>
+    <string name="add_x_witharg">%s সংযোজন করুন</string>
 </resources>
