--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">كتلة التعليمات البرمجية</string>
     <string name="add_completion_date">إضافة تاريخ الإكمال</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">إضافة تاريخ إنجاز المهام عند وضع علامة عليها كما تم</string>
+    <string name="file_description_format">تنسيق وصف الملف</string>
+    <string name="file_description_format_dialog">تنسيق الوصف تحت كل ملف في متصفح الملفات. يتبع قواعد SimpleDateFormat الخاصة بالأندرويد، مع إضافة FS لعرض حجم الملف. اتركه فارغاً لاستخدام التنسيق الافتراضي للغة الخاصة بك.\n\nمثال المدخلات:\nFS yyyy MMM dd hh:mm:ss aa\nتنسيق المخرج:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">تحميل القيمة الافتراضية</string>
 </resources>
