--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Kōd blok</string>
     <string name="add_completion_date">Dodaj datum završetka</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Dodaj datum završetka za zadatke kad su označeni kao završeni</string>
+    <string name="file_description_format">Format opisa datoteke</string>
+    <string name="file_description_format_dialog">Format za opis ispod svake datoteke u pregledniku datoteka. Slijedi Androidova SimpleDateFormat pravila, s dodatkom FS za prikazivanje veličine datoteke. Ostavite prazno da biste koristili predefinisani format za Vaše područje.\n\nPrimjer:\nFS yyyy MMM dd hh:mm:ss aa\nRezultat:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Učitavam predefinisane vrijednosti</string>
 </resources>
