--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Bloc de codi</string>
     <string name="add_completion_date">Afegeix data de finalització</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Afegeix la data de finalització per a tots al marcar-los com fets</string>
+    <string name="file_description_format">Format de descripció del fitxer</string>
+    <string name="file_description_format_dialog">Format per a la descripció sota cada arxiu en el navegador d\'arxius. Segueix les regles de SimpleDateFormat, amb l\'addició de FS per mostrar la mida del fitxer. Deixeu-lo en blanc per utilitzar el format per defecte de la vostra configuració regional.\n\nExemple d\'entrada:\nFS yyyy MMM dd hh:mm:ss aa\nFormat de sortida:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">S\'està carregant el valor per defecte</string>
 </resources>
