--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Kode blok</string>
     <string name="add_completion_date">Tilføj slutdato</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Tilføj færdiggørelsesdato for gøremål når de markeres som gjort</string>
+    <string name="file_description_format">Fil beskrivelse format</string>
+    <string name="file_description_format_dialog">Format for beskrivelsen under hver fil i filbrowseren. Følger Androids SimpleDateFormat regler, med tilføjelsen af FS for at vise filstørrelse. Lad stå tomt for at bruge standardformatet for din landestandard.\n\nEksempel input:\nFS yyyy MMM dd hhh:mm:ss aa\nOutput format:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Indlæser standardværdi</string>
 </resources>
