--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Code-Block</string>
     <string name="add_completion_date">Fertigstellungsdatum hinzufügen</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Bei Erledigung von Aufgaben Abschlussdatum ergänzen</string>
+    <string name="file_description_format">Formatierung der Dateibeschreibung</string>
+    <string name="file_description_format_dialog">Formatierung der Beschreibung unter jeder Datei im Dateibrowser. Folgt den SimpleDateFormat-Regeln von Android mit Ergänzung von FS zur Anzeige der Dateigröße. Leer lassen, wenn das Standardformat für Ihr Gebietsschema verwendet werden soll.\n\nBeispieleingabe:\nFS yyyy MMM dd hh:mm:ss aa\nAusgabeformat:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Standardwert wird geladen</string>
 </resources>
