--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Bloque de código</string>
     <string name="add_completion_date">Añadir fecha de finalización</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Añadir fecha de finalización para las tareas al marcarlas como realizadas</string>
+    <string name="file_description_format">Formato de descripción de archivo</string>
+    <string name="file_description_format_dialog">Formato para la descripción bajo cada archivo en el navegador de archivos. Sigue las reglas de SimpleDateFormat, con la adición de FS para mostrar el tamaño del archivo. Deje en blanco para usar el formato predeterminado para su locale.\n\nEjemplo de entrada:\nFS yyyy MMM dd hh:mm:ss aa\nFormato de salida:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Cargando valor por defecto</string>
 </resources>
