--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Koodilohko</string>
     <string name="add_completion_date">Lisää valmistumispäivä</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Lisää todoksen valmistumispäivä kun merkitään ne valmiiksi</string>
+    <string name="file_description_format">Tiedoston kuvauksen muoto</string>
+    <string name="file_description_format_dialog">Muotoile kuvauksen alla jokaisen tiedoston tiedostoselain. Follows Android SimpleDateFormat säännöt, lisäämällä FS näytetään tiedoston koko. Jätä tyhjäksi käyttääksesi paikallista oletusmuotoa. @ title: group\n\nEsimerkkisyöte:\nFS yyyy MMM dd hh:mm:ss aa\nOutput format:\n30KB 2020 Mar 20 11:24:52</string>
+    <string name="loading_default_value">Ladataan oletusarvoa</string>
 </resources>
