--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Blocco di codice</string>
     <string name="add_completion_date">Aggiungi data di completamento</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Aggiungi data di completamento per i todo quando contrassegnati come completati</string>
+    <string name="file_description_format">Formato descrizione file</string>
+    <string name="file_description_format_dialog">Formato per la descrizione sotto ogni file nel file browser. Segue le regole SimpleDateFormat di Android, con l\'aggiunta di FS per mostrare le dimensioni del file. Lasciare vuoto per usare il formato predefinito per il tuo locale.\n\nEsempio di input:\nFS yyyy MMM dd hh:mm:ss aa\nFormato di output:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Caricamento valore predefinito</string>
 </resources>
