--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">コードブロック</string>
     <string name="add_completion_date">完了日を追加</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">完了時にタスクの完了日を追加する</string>
+    <string name="file_description_format">ファイル説明の形式</string>
+    <string name="file_description_format_dialog">ファイルブラウザの各ファイルの下の説明のためのフォーマット。ファイルサイズを表示するためのFSの追加で、AndroidのSimpleDateFormatルールに従います。 ロケールにデフォルトの形式を使用するには、空白のままにしてください。\n\n入力例:\nFS yyyyMMM dd hhh:mm:ss aa\n出力形式:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">既定値を読み込み中</string>
 </resources>
