--- a/app/src/main/res/values-no/strings.xml
+++ b/app/src/main/res/values-no/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Kode blokk</string>
     <string name="add_completion_date">Legg til ferdig dato</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Legg til sluttdato for todos når du merker dem som ferdig</string>
+    <string name="file_description_format">Format for filbeskrivelse</string>
+    <string name="file_description_format_dialog">Formatet for beskrivelsen under hver fil i filnettleser. Følg reglene for Android, SimpleDateFormat med tillegg av FS for å vise filstørrelse. La være blank for å bruke standardformat for din lokalitet.\n\nEksempel input:\nFS yyyy MMM dd ht:mm:ss aa\nUtdataformat:\n30 KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Laster inn standardverdi</string>
 </resources>
