--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Blok kodu</string>
     <string name="add_completion_date">Dodaj datę zakończenia</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Dodaj datę zakończenia dla zadań przy oznaczaniu ich jako wykonane</string>
+    <string name="file_description_format">Format opisu pliku</string>
+    <string name="file_description_format_dialog">Format opisu w każdej przeglądarce plików. Postępuje zgodnie z regułami SimpleDateFormat Androida, z dodatkiem FS do pokazywania rozmiaru pliku. Pozostaw puste, aby użyć domyślnego formatu dla swojego języka.\n\nPrzykładowe wejście:\nFS yyyy MMM dd hh:mm:ss aa\nFormat wyjściowy:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Wczytywanie wartości domyślnej</string>
 </resources>
