--- a/app/src/main/res/values-sc/strings.xml
+++ b/app/src/main/res/values-sc/strings.xml
@@ -377,4 +377,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="code_block">Blocu de còdighe</string>
     <string name="add_completion_date">Inserta una data de cumpridura</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Annanghe una data de cumpridura pro sas fainas cando las marcas comente acabadas</string>
+    <string name="file_description_format">Formadu de descritzione de su documentu</string>
+    <string name="file_description_format_dialog">Formadu pro sa descritzione in suta de cada documentu in s\'esploradore de documentos. Sighit sas règulas SimpleDateFormat de Android, cun s\'annànghida de FS pro ammustrare sa mannària de sos documentos.Lassa·lu bòidu pro impreare su formadu predefinidu pro sa limba tua..\n\nEsèmpiu de intrada:\nFS yyyy MMM dd hh:mm:ss aa\nFormadu de essida:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Carrighende su valore predefinidu</string>
 </resources>
